--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Playwright Smart</title>
+    <meta name="description" content="Enterprise WeSign Test Management Platform - Playwright Smart" />
+    <meta name="keywords" content="WeSign, Playwright, Testing, Enterprise, Document Signing" />
+    <title>WeSign Enterprise - Playwright Smart</title>
   </head>
   <body>
     <div id="root"></div>
