--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="32x32" href="/favicon-32x32.svg" />
+    <link rel="icon" type="image/svg+xml" sizes="16x16" href="/favicon-16x16.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Enterprise WeSign Test Management Platform - Playwright Smart" />
-    <meta name="keywords" content="WeSign, Playwright, Testing, Enterprise, Document Signing" />
-    <title>WeSign Enterprise - Playwright Smart</title>
+    <meta name="description" content="QA Intelligence - Smart Test Management & Self-Healing System" />
+    <meta name="keywords" content="QA Intelligence, Testing, Test Management, Analytics, E2E Testing, Browser Testing, Self-Healing" />
+    <meta name="theme-color" content="#0f172a" />
+    <title>QA Intelligence</title>
   </head>
   <body>
     <div id="root"></div>
